--- a/templates/calling/list_generator.html
+++ b/templates/calling/list_generator.html
@@ -238,8 +238,8 @@
       <nav aria-label="page navigation" class="mt-3" style="display:flex; justify-content:center;">
         <ul class="pagination">
           {% if page_obj.has_previous %}
-            <li class="page-item"><a class="page-link" href="?page=1&per_page={{ per_page }}{% if request.GET %}&{{ request.GET.urlencode|safe }}{% endif %}">« First</a></li>
-            <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}&per_page={{ per_page }}{% if request.GET %}&{{ request.GET.urlencode|safe }}{% endif %}">‹ Prev</a></li>
+            <li class="page-item"><a class="page-link" href="?page=1&per_page={{ per_page }}{% if qs_params %}&{{ qs_params }}{% endif %}">« First</a></li>
+            <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}&per_page={{ per_page }}{% if qs_params %}&{{ qs_params }}{% endif %}">‹ Prev</a></li>
           {% else %}
             <li class="page-item disabled"><span class="page-link">« First</span></li>
             <li class="page-item disabled"><span class="page-link">‹ Prev</span></li>
@@ -251,14 +251,14 @@
               {% if p == page_obj.number %}
                 <li class="page-item active" aria-current="page"><span class="page-link">{{ p }}</span></li>
               {% else %}
-                <li class="page-item"><a class="page-link" href="?page={{ p }}&per_page={{ per_page }}{% if request.GET %}&{{ request.GET.urlencode|safe }}{% endif %}">{{ p }}</a></li>
+                <li class="page-item"><a class="page-link" href="?page={{ p }}&per_page={{ per_page }}{% if qs_params %}&{{ qs_params }}{% endif %}">{{ p }}</a></li>
               {% endif %}
             {% endif %}
           {% endfor %}
 
           {% if page_obj.has_next %}
-            <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}&per_page={{ per_page }}{% if request.GET %}&{{ request.GET.urlencode|safe }}{% endif %}">Next ›</a></li>
-            <li class="page-item"><a class="page-link" href="?page={{ paginator.num_pages }}&per_page={{ per_page }}{% if request.GET %}&{{ request.GET.urlencode|safe }}{% endif %}">Last »</a></li>
+            <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}&per_page={{ per_page }}{% if qs_params %}&{{ qs_params }}{% endif %}">Next ›</a></li>
+            <li class="page-item"><a class="page-link" href="?page={{ paginator.num_pages }}&per_page={{ per_page }}{% if qs_params %}&{{ qs_params }}{% endif %}">Last »</a></li>
           {% else %}
             <li class="page-item disabled"><span class="page-link">Next ›</span></li>
             <li class="page-item disabled"><span class="page-link">Last »</span></li>
